--- a/src/Elders.Cronus.Projections.Replay.Common/Cronus.Projections.Replay.Common.nuspec
+++ b/src/Elders.Cronus.Projections.Replay.Common/Cronus.Projections.Replay.Common.nuspec
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <package xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
   <metadata xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <description>@description@</description>
@@ -7,7 +7,10 @@
     <authors>@authors@</authors>
     <language>en-US</language>
     <summary>@summary@</summary>
+    <licenseUrl>https://github.com/Elders/Cronus.Projections.Replay.Common/blob/master/LICENSE</licenseUrl>
+    <projectUrl>https://github.com/Elders/Cronus.Projections.Replay.Common</projectUrl>
     <releaseNotes>@releaseNotes@</releaseNotes>
+    <tags>cronus, projections, replay, events</tags>
     @dependencies@
   </metadata>
 </package>
