Adds CosmosEventStorePlayer to the Player

--- a/src/Elders.Cronus.Projections.Replay.Common/packages.config
+++ b/src/Elders.Cronus.Projections.Replay.Common/packages.config
@@ -1,12 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CassandraCSharpDriver" version="3.0.9" targetFramework="net461" />
-  <package id="Cronus" version="3.0.3" targetFramework="net461" />
-  <package id="Cronus.DomainModeling" version="3.1.4" targetFramework="net461" />
+  <package id="Cronus" version="3.0.6" targetFramework="net461" />
+  <package id="Cronus.DomainModeling" version="3.3.0" targetFramework="net461" />
   <package id="Cronus.Persistence.Cassandra" version="3.3.0" targetFramework="net461" />
+  <package id="Cronus.Persistence.CosmosDb" version="0.1.7" targetFramework="net461" />
   <package id="Cronus.Serialization.NewtonsoftJson" version="1.0.1" targetFramework="net461" />
   <package id="LibLog" version="4.2.6" targetFramework="net461" developmentDependency="true" />
   <package id="lz4net" version="1.0.15.93" targetFramework="net461" />
+  <package id="Microsoft.Azure.DocumentDB" version="1.17.0" targetFramework="net461" />
   <package id="Multithreading.Scheduler" version="1.1.2" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
 </packages>
